* Mon Feb 15 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 1.1.2-0
- Fixed an issue with running `puppet resource group`
- Added support for Puppet 7
- Dropped support for Puppet 4

* Tue Dec 17 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 1.1.1-0
- Execute a single modify command instead of a list of 'add' and 'delete'
  commands
- Capture stderr on command runs

* Fri Dec 13 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 1.1.0-0
- Add EL8 support
- Fixed a bug where the system would incorrectly attempt to process users even
  if the user was not known to the underlying system

* Wed May 22 2019 Liz Nemsick <lnemsic.simp@gmail.com.com> - 1.0.7-0
- Expand the range of Puppet to < 7.0.0

* Wed Oct 24 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 1.0.6-0
- Refactored the module to work with Puppet > 5.5.6
  - Puppet 5.5.7 broke the Type/Provider interface in the 'group' type so
    required an emergency refactor

* Tue Mar 20 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 1.0.5-0
- Added support for OEL and Puppet 5

* Tue Nov 28 2017 Nick Markowski <nicholas.markowski@onyxpoint.com> - 1.0.4-0
- 1.0.3 was tagged, bumping to 1.0.4
- Fix addresses https://github.com/onyxpoint/puppet-gpasswd/issues/7
- Before this fix, users could not specify groups in the system
  GID range, SYS_GID_[MAX,MIN] in /etc/login.defs. Added system_groups
  feature to gpasswd.
- Added beaker tests to ensure groups can be created within the system range.

* Sun May 21 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 1.0.2-0
  - Fixed README typos
  - Cleaned up code
  - Added acceptance tests
  - Added support for `auth_membership`
  - Fixed code regression from d49cf32
    - Thanks for the notification from John Warburton
  - Validated noop message was correct
  - Fixed sort order when checking user lists against the system

* Fri Feb 17 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 1.0.1-0
- Fixed Gemfile

* Fri Jul 29 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 1.0.0-0