@@ -1,18 +1,26 @@
+# ------------------------------------------------------------------------------
+#         NOTICE: **This file is maintained with puppetsync**
+#
+# This file is automatically updated as part of a puppet module baseline.
+# The next baseline sync will overwrite any local changes made to this file.
+# ------------------------------------------------------------------------------
 .*.sw?
 .yardoc
-dist/
-pkg/
-spec/fixtures/*
-!spec/fixtures/hieradata/
-!spec/fixtures/hieradata/*
-spec/fixtures/hieradata/hiera.yaml
-spec/rp_env/
-.rspec_system
-.vagrant/
-.bundle/
-Gemfile.lock
-vendor/
-junit/
-log/
-doc/
 .idea/
+dist
+/pkg
+# Read everything in fixtures
+/spec/fixtures/*
+# Un-ignore hieradata
+!/spec/fixtures/hieradata/*
+# Except this one, which is auto-generated
+/spec/fixtures/hieradata/hiera.yaml
+/spec/rp_env
+/.rspec_system
+/.vagrant
+/.bundle
+/.vendor
+/vendor
+/junit
+/log
+/doc
